--- a/Source/NakamaNetwork.Entities/NakamaNetwork.Entities.csproj
+++ b/Source/NakamaNetwork.Entities/NakamaNetwork.Entities.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.1" />
     </ItemGroup>
