--- a/Source/NakamaNetwork.Web/NakamaNetwork.Web.csproj
+++ b/Source/NakamaNetwork.Web/NakamaNetwork.Web.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\NakamaNetwork.Entities\NakamaNetwork.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
