--- a/Source/TreasureGuide.Web/package.json
+++ b/Source/TreasureGuide.Web/package.json
@@ -22,7 +22,7 @@
     "moment": "^2.20.1",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text#latest",
-    "thenby": "^1.2.3",
+    "thenby": "1.2.3",
     "whatwg-fetch": "^2.0.3"
   },
   "peerDependencies": {},
@@ -36,7 +36,7 @@
     "browser-sync": "^2.13.0",
     "connect-history-api-fallback": "^1.2.0",
     "event-stream": "^3.3.3",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^4.0.0",
     "gulp-changed-in-place": "^2.0.3",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.9.2",
@@ -45,7 +45,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
-    "gulp-shell": "^0.6.3",
+    "gulp-shell": "^0.6.5",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^3.1.4",
@@ -56,6 +56,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-typescript-preprocessor": "^0.2.1",
     "minimatch": "^3.0.2",
+    "node-sass": "^4.11.0",
     "requirejs": "^2.3.3",
     "through2": "^2.0.1",
     "tslint": "^3.11.0",
